@@ -61,6 +61,10 @@ namespace CUTS
 
         this.help_item_.Controls.Add (show_help);
       }
+
+      // Hide the console if it is not needed
+      if (this.console_text_.Controls.Count == 0)
+        this.console_.Style["display"] = "none";
     }
 
     /**
@@ -101,7 +105,7 @@ namespace CUTS
      */
     private void show_message (String msg, String cssclass)
     {
-/*      Label label = new Label ();
+      Label label = new Label ();
       label.CssClass = cssclass;
       label.Text = "<div>&middot; " + msg + "</div>";
 
@@ -109,7 +113,7 @@ namespace CUTS
 
       // Make sure we can actually see the console.
       if (this.console_.Style["display"] == "none")
-        this.console_.Style["display"] = "block";*/
+        this.console_.Style["display"] = "block";
     }
   }
 }
